# ZRenderEngine

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
config/win64/: app_config.json
src/: main.cpp  test.cpp  vulkan_engine.cpp  vulkan_engine.h  vulkan_sample.cpp  vulkan_sample.h  vulkan_structure.h
src/_callable/: CMakeLists.txt  callable.h
src/_gltf/: CMakeLists.txt  gltf_converter.h  gltf_data.h  test.h
src/_old/: CMakeLists.txt  builder.h  vulkan_commandbuffer.cpp  vulkan_commandbuffer.h  vulkan_device.cpp  vulkan_device.h  vulkan_framebuffer.cpp  vulkan_framebuffer.h  vulkan_instance.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_queue.h  vulkan_synchronization.cpp  vulkan_synchronization.h  vulkan_window.cpp  vulkan_window.h
src/_rendergraph/: CMakeLists.txt
src/_templates/: CMakeLists.txt  common.h
src/_vra/: CMakeLists.txt  pool.cpp  vra.h
src/builder/: CMakeLists.txt  builder.h
src/gltf/: CMakeLists.txt  gltf_converter.h  gltf_data.h  gltf_loader.cpp  gltf_loader.h  gltf_parser.cpp  gltf_parser.h  test.cpp  tiny_gltf_impl.cpp
src/initialization/: CMakeLists.txt  vulkan_device.cpp  vulkan_device.h  vulkan_instance.cpp  vulkan_instance.h  vulkan_queue.cpp  vulkan_queue.h  vulkan_window.cpp  vulkan_window.h
src/logger/: CMakeLists.txt  vulkan_logger.cpp  vulkan_logger.h
src/pipeline/: CMakeLists.txt  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_renderpass.cpp  vulkan_renderpass.h  vulkan_shader.cpp  vulkan_shader.h
src/shader/: compile.bat  gltf.vert  gltf.vert.spv  triangle.vert  triangle.vert.spv  validate.bat
src/source/: CMakeLists.txt  vulkan_commandbuffer.cpp  vulkan_framebuffer.cpp  vulkan_framebuffer.h
src/synchronization/: CMakeLists.txt  vulkan_synchronization.cpp  vulkan_synchronization.h
src/utility/: CMakeLists.txt  config_reader.h  logger.cpp  logger.h
src/vulkan_resource_allocator/: CMakeLists.txt  pool.h  vra.cpp  vra.h
src/window/: CMakeLists.txt
